--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ python-docx==0.8.11
 openai==0.11.0
 # pywin32==302  # Only if you need to handle .doc files on Windows
 psycopg2-binary==2.9.3
+gunicorn
